Fixed issue with section box, still missing spacing between sections

--- a/css/style.css
+++ b/css/style.css
@@ -5,24 +5,45 @@
 h1{
   text-align: center;
 }
+
+h2{
+  text-align: center;
+  position: absolute;
+  border: 1px solid black;
+  width: 100px;
+  padding: 10px;
+  float: right;
+  margin: 0px;
+  right: 0;
+}
+
 /* Simple Responsive Framework. */
 .row {
   width: 100%;
 }
 
-section{
-  margin: 40px;
-}
 div{
 	background-color: darkgray;
-  padding: 20px;
+  border: 10x solid black;
+  margin: 20px; 
+  float: left;
+  margin-right: auto;
+  margin-left: auto;
+  position: relative;
+}
+
+p{
+  border: 1px;
+  margin-right: auto;
+  margin-left: auto;
+  margin-top: 55px;
+  padding: 5px;
 }
 
 /********** Desktop devices only **********/
 @media (min-width: 992px) {
   .col-lg-1, .col-lg-2, .col-lg-3, .col-lg-4, .col-lg-5, .col-lg-6, .col-lg-7, .col-lg-8, .col-lg-9, .col-lg-10, .col-lg-11, .col-lg-12 {
-    border: 1px solid gray;
-    float: left;
+    border: 3px solid black;
   }
   .col-lg-1 {
     width: 8.33%;
@@ -66,7 +87,6 @@ div{
 @media (min-width: 768px) and (max-width: 991px) {
   .col-md-1, .col-md-2, .col-md-3, .col-md-4, .col-md-5, .col-md-6, .col-md-7, .col-md-8, .col-md-9, .col-md-10, .col-md-11, .col-md-12 {
     border: 1px solid gray;
-    float: left;
   }
   .col-md-1 {
     width: 8.33%;
@@ -105,4 +125,3 @@ div{
     width: 100%;
   }
 }
-
